# bugbot

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .mergify.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .taskcluster.yml  .travis.yml  LICENSE  Notes.txt  README.rst  alembic.ini  check_bugbug_version.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  ruff.toml  run_close_intermittents.sh  run_code_freeze_week.sh  run_survey_sec_bugs.sh  runauto_nag.sh  runauto_nag_common.sh  runauto_nag_daily.sh  runauto_nag_daily_py2.sh  runauto_nag_daily_py3.sh  runauto_nag_hourly.sh  runauto_nag_hourly_py2.sh  runauto_nag_hourly_py3.sh  runauto_nag_weekdays.sh  setup.py  tox.ini  update_people.sh
.github/: copilot-instructions.md  dependabot.yml  mergify.yml  pull_request_template.md
auto_nag/: __init__.py  auto_mock.py  bugbug_utils.py  bzcleaner.py  cache.py  calendar.py  check_tools_on_wiki.py  common.py  component_triagers.py  components.py  config.py  constants.py  db.py  erroneous_bzmail.py  escalation.py  history.py  iam.py  log.py  mail.py  multi_autofixers.py  multinaggers.py  nag_me.py  next_release.py  people.py  round_robin.py  round_robin_calendar.py  round_robin_fallback.py  severity.py  team_managers.py  topcrash.py  user_activity.py  utils.py
bugbot/: __init__.py  auto_mock.py  bugbug_utils.py  bzcleaner.py  cache.py  component_triagers.py  config.py  constants.py  db.py  escalation.py  gcp.py  history.py  iam.py  inactive_utils.py  log.py  mail.py  multi_autofixers.py  multinaggers.py  nag_me.py  people.py  round_robin.py  round_robin_calendar.py  round_robin_fallback.py  severity.py  spec_mapping.py  spec_mapping.yml  team_managers.py  topcrash.py  (+3 more)
bugbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+659 files in other folders)
